# musica_aitranslator

./: Cargo.toml
src/: jobs.rs  main.rs  parser.rs  storage.rs  trustme.rs  utils.rs
src/pest/: musica.pest
