[package]
name = "musica_aitranslator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
apalis = { version = "0.7.4", features = ["limit"] }
apalis-sql = { version = "0.7.4", features = ["sqlite", "tokio-comp"] }
async-openai = { version = "0.31.1", features = ["byot"] }
async-recursion = "1.1.1"
auto-context = "0.1.1"
console-subscriber = "0.5.0"
derive_builder = "0.20.2"
dotenv = "0.15.0"
enum_dispatch = "0.3.13"
enum_dispatch_pest_parser = "0.1.1"
futures = "0.3.31"
if_chain = "1.0.3"
kv = "0.24.0"
lazy_static = "1.5.0"
pest = "2.8.4"
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
    "with-json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
walkdir = "2.5.0"
